--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <ul id="taskList"></ul>
 
+    <p>Total de Tarefas: <span id="tasksTotal">0</span></p>
+    
     <div class="controls">
       <button onclick="markAllCompleted()">Marcar Todas Concluídas</button>
       <button onclick="clearAll()">Remover Todas</button>
