--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="config_buttons">
+    <button id="toggleModeBtn">White Mode</button>
+  </div>
   <div class="container">
-    <h1>Lista de Tarefas</h1>
+    <h1 class="orange_mode">Lista de Tarefas</h1>
     <div class="input-section">
       <input type="text" id="taskInput" placeholder="Digite uma tarefa..." />
       <button onclick="addTask()">Adicionar</button>
@@ -16,8 +19,6 @@
 
     <ul id="taskList"></ul>
 
-    <p>Total de Tarefas: <span id="tasksTotal">0</span></p>
-    
     <div class="controls">
       <button onclick="markAllCompleted()">Marcar Todas Concluídas</button>
       <button onclick="clearAll()">Remover Todas</button>
