Versão com Modo de Exibição Preto/Branco e Contador de Tarefas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <ul id="taskList"></ul>
 
+    <p>Total de Tarefas: <span id="tasksTotal">0</span></p>
+
     <div class="controls">
       <button onclick="markAllCompleted()">Marcar Todas Concluídas</button>
       <button onclick="clearAll()">Remover Todas</button>
