Versão Não Finalizada com Novo Botão para Mudar Modo de Exibição para Roxo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Lista de Tarefas</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="black_mode">
   <div class="config_buttons">
     <button id="toggleModeBtn">White Mode</button>
+    <button id="toggleModeBtn">Purple Mode</button>
   </div>
   <div class="container">
-    <h1 class="orange_mode">Lista de Tarefas</h1>
+    <h1>Lista de Tarefas</h1>
     <div class="input-section">
       <input type="text" id="taskInput" placeholder="Digite uma tarefa..." />
       <button onclick="addTask()">Adicionar</button>
