--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body class="black_mode">
   <div class="config_buttons">
-    <button id="toggleModeBtn">White Mode</button>
-    <button id="toggleModeBtn">Purple Mode</button>
+    <div class="mode">
+      <p>White Mode</p>
+      <button id="whiteModeBtn">Ativar/Desativar</button>
+    </div>
+    <div class="mode">
+      <p>Purple Mode</p>
+      <button id="purpleModeBtn">Ativar/Desativar</button>
+    </div>
   </div>
   <div class="container">
     <h1>Lista de Tarefas</h1>
